--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -109,10 +109,6 @@
             <% end %>
 
           <!-- Non Owner -->
-          <% elsif @band.leader.id != current_musician.id %>
-              <% if member.vacant? %>
-                <%= button_to 'Apply', band_member_approvals_path(@band, member, approval: {musician_id: current_musician.id, approval: false, member_id: member.id}), :method => :post, class: "apply-button" %>
-              <% end %>
           <% else %>
 
               <p>Please register to apply</p>
@@ -123,10 +119,29 @@
 
     <% end %>
 
-
       </p>
-    <% end %>
+  <% end %>
 
+    <% if musician_signed_in? %>
+  <% if @band.leader.id != current_musician.id %>
+
+  <% @band.members.each do |member| %>
+    <p>
+      <% if member.musician == nil %>
+        <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "Lead" %>
+        <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "Rhythm" %>
+        <%= image_tag("skills/singer.png", size:  "50x50") if member.position.description == "Singer" %>
+        <%= image_tag("skills/drummer.png", size:  "50x50") if member.position.description == "Drummer" %>
+        <%= image_tag("skills/keyboard.png", size:  "50x50") if member.position.description == "Keyboard" %>
+        <%= image_tag("skills/bass.png", size:  "50x50") if member.position.description == "Bass" %>
+        <% if member.vacant? %>
+          <%= button_to 'Apply', band_member_approvals_path(@band, member, approval: {musician_id: current_musician.id, approval: false, member_id: member.id}), :method => :post, class: "apply-button" %>
+        <% end %>
+      <%end%>
+    </p>
+  <%end%>
+<%end%>
+<%end%>
     <% if musician_signed_in? %>
       <% if @band.leader.id == current_musician.id %>
 
