--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -126,6 +126,14 @@ aside {
   .musician-image {
     width:  100%;
     max-height: 50%;
+    position: relative;
+  }
+
+  .skill-image {
+    position: absolute;
+    top:  130px;
+    z-index: 12;
+    padding: 0 5px;
   }
 
   .musc{
@@ -133,17 +141,11 @@ aside {
     position: relative;
   }
 
-  .skill-image {
-    position: absolute;
-    top:  35%;
-    z-index: 12;
-    padding: 0 5px;
-  }
-
   .card-text {
     position: absolute;
-    top: 55%;
+    top: 60%;
     padding: 5px;
+    font-size:  1em;
   }
 }
 
@@ -152,7 +154,7 @@ aside {
 }
 
 .positions-scroll a {
-color:black;  
+color:black;
 }
 
 .genres-scroll a{
